feat: post /api/v1/shows
